<resources>
    <string name="app_name">Easysent</string>
    <string name="login">Login</string>
    <string name="or_join_easysent">Or join EasySent</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="connect_with_friends">Connect With Friends</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="conform_password">Conform Password</string>
    <string name="forgot_pass_word">Forgot Password</string>
    <string name="enter_register_email_address">Enter Your Register Email Address</string>
    <string name="send">Send</string>
    <string name="don_t_have_an_account_yet">Don\'t Have A Account Yet?</string>
    <string name="verification">Verification</string>
    <string name="verify">Verify</string>
    <string name="don_t_receive_the_code">Don\'t Recived The Code?</string>
    <string name="send_again">Send Again</string>
    <string name="set_password">Set Password</string>
    <string name="enter_new_password">Re Enter New Password</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mr_nobody">Mr. Nobody</string>
    <string name="nobody_gmail_com">nobody@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Chenge Password</string>
    <string name="logout">Logout</string>
    <string name="version">Version:</string>
    <string name="_2_0">2.0</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update">Update</string>
    <string name="prefer_not_say">Prefer Not Say</string>
    <string name="users">Users</string>
    <string name="chats">Chats</string>
    <string name="images">Images</string>
    <string name="pdf">Pdf</string>
    <string name="docs">Docs</string>
    <string name="video">Video</string>
    <string name="change_background">Change Background</string>
    <string name="account_settings">Account Settings</string>
    <string name="authentication">Authentication:</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="delete">Delete</string>
    <string name="account_management">Account Management:</string>
    <string name="delete_account">Delete Account</string>
    <string name="click_to_add_video">Click to add video</string>
    <string name="forward">Forward</string>
    <string name="accepTc">I Agree To Accept Terms And condition</string>
    <string name="report">Report</string>
    <string name="report_alert">This message will be checked by our Easysent team if any violation found as per TERMS AND CONDITION,This message will be removed, the user will not be notified</string>
    <string name="send_report">Send Report</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="create_new_group">Create new group</string>
    <string name="exit_group">Exit Group</string>
    <string name="login_history">Login History:</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="splash">splash</string>
    <string name="groups">Groups</string>
    <string name="type_a_message">Type a message...</string>
    <string name="attach_attachment">attach attachment</string>
    <string name="add_imoge">add imoge</string>
    <string name="play">paly</string>
    <string name="download">Download</string>
</resources>