<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/thim_color"
    tools:context=".activity.ForgotPasswordActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/anim_logo"
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_14sdp"
            />


        <LinearLayout
            android:layout_below="@id/banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_350sdp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/curved_top"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_30sdp">

            <TextView
                style="@style/TextHeding"
                android:textSize="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass_word" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/curved_border_black"
                android:hint="@string/enter_register_email_address"
                android:paddingStart="@dimen/_7sdp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/gray_white" />


            <RelativeLayout
                android:id="@+id/btn_sendOtp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/button_bacground">

                <TextView
                    style="@style/Textdesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/send"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:background="@drawable/curved_border_green">

                    <TextView
                        android:id="@+id/info"
                        style="@style/TextHeding3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/don_t_have_an_account_yet"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btn_register"
                        style="@style/TextHeding3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:layout_toEndOf="@id/info"
                        android:text="@string/register"
                        android:textColor="@color/thim_color"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>

</ScrollView>